--- a/src/components/SnackBar/SnackBar.css
+++ b/src/components/SnackBar/SnackBar.css
@@ -11,7 +11,9 @@
   border: #000000dd solid 1px;
   border-radius: 10px;
   color: white;
-  user-select: none; }
+  user-select: none;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px); }
 
 .SnackBar-message {
   padding: 0px 16px; }
