--- a/src/components/SnackBar/SnackBar.scss
+++ b/src/components/SnackBar/SnackBar.scss
@@ -12,6 +12,8 @@
     border-radius: 10px;
     color: white;
     user-select: none;
+    backdrop-filter: blur(5px);  
+    -webkit-backdrop-filter: blur(5px);
 }
 
 .SnackBar-message {
