Created Slider component and added to playground

--- a/src/App.css
+++ b/src/App.css
@@ -47,16 +47,18 @@
   height: 65%;
   float: left;
   background-color: #222;
+  /* background-image: url("https://images.unsplash.com/photo-1516655855035-d5215bcb5604"); */
+  background-size: 80%;
   padding-top: 2%;
-  display: flex;
+
   flex-direction: column;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center; 
+}
 
 .right-div {
   width: 49.5%;
   float: right;
-  background-color: gainsboro;
   padding-top: 2%; }
 
 .scope-button {
@@ -85,3 +87,7 @@
   font-size: 13px;
   color: white;
   background: rgba(167, 167, 167, 0.5); }
+
+  .slider-wrapper{
+    width: 30%;
+  }
