--- a/src/App.scss
+++ b/src/App.scss
@@ -60,10 +60,6 @@
   float: left;
   background-color: #222;
   padding-top: 2%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .right-div{
@@ -100,4 +96,8 @@
   font-size: 13px;
   color:white;
   background: rgba(167, 167, 167, 0.5)
+}
+
+.slider-wrapper{
+  width: 30%;
 }
