--- a/src/components/SnackBar/Snackbar.scss
+++ b/src/components/SnackBar/Snackbar.scss
@@ -5,17 +5,25 @@
     align-items: center;
     height: 48px;
     width: 344px;
-    /* background: linear-gradient(180deg, #6C6C6C 0%, #434343 100%); */
-    background-color: #000000dd;
+    background: linear-gradient(180deg, #6C6C6C 0%, #434343 100%);
+    // background-color: #000000dd;
     /* background-color: #6C6C6C; */
     border: #000000dd solid 1px;
     border-radius: 10px;
     color: white;
     user-select: none;
+
+    position: absolute;
+    bottom: 10px;
+    left: 500px;
+    // top: 100px;
+    z-index: 100;
 }
 
 .SnackBar-message {
     padding: 0px 16px;
+    text-align: left;
+    font-size: 14px;    
 }
 
 .SnackBar-button {
