--- a/src/components/SnackBar/SnackBar.scss
+++ b/src/components/SnackBar/SnackBar.scss
@@ -5,26 +5,28 @@
     align-items: center;
     height: 48px;
     width: 344px;
-    /* background: linear-gradient(180deg, #6C6C6C 0%, #434343 100%); */
-    background-color: #000000dd;
-    /* background-color: #6C6C6C; */
-    border: #000000dd solid 1px;
+    // background: linear-gradient(180deg, #1BADF8 0%, #2B7DE5 100%);
+    background: rgba(black, 0.8);
     border-radius: 10px;
     color: white;
     user-select: none;
     backdrop-filter: blur(5px);  
     -webkit-backdrop-filter: blur(5px);
+
+  
 }
 
 .SnackBar-message {
     padding: 0px 16px;
+    font-size: 14px;
+    text-align: left;
 }
 
 .SnackBar-button {
     /* margin: 20px; */
     padding: 6px 8px;
     font-size: 15px;
-    /* font-weight: bold; */
+    // font-weight: bold;
     color: #FF3B30;
 }
 
