--- a/src/components/SnackBar/Snackbar.scss
+++ b/src/components/SnackBar/Snackbar.scss
@@ -5,17 +5,15 @@
     align-items: center;
     height: 48px;
     width: 344px;
-    background: linear-gradient(180deg, #1BADF8 0%, #2B7DE5 100%);
-    border: #000000dd solid 1px;
+    // background: linear-gradient(180deg, #1BADF8 0%, #2B7DE5 100%);
+    background: rgba(black, 0.8);
     border-radius: 10px;
     color: white;
     user-select: none;
     backdrop-filter: blur(5px);  
     -webkit-backdrop-filter: blur(5px);
 
-    position: absolute;
-    bottom: 20px;
-    left: 500px;
+  
 }
 
 .SnackBar-message {
