--- a/src/components/AppBar/AppBar.css
+++ b/src/components/AppBar/AppBar.css
@@ -1,20 +1,52 @@
 .cupertino-app-bar {
-  position: fixed;
   top: 0;
-  height: 5%;
   width: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  margin: 0;
+  z-index: 10; }
 
 .bar-content {
   background: linear-gradient(180deg, #525252 0%, #3b3a3a 100%);
   color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between; }
+
+.bar-links {
+  padding: 1%;
+  width: 25%; }
+
+.bar-separator {
+  height: 5px;
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(3px); }
+
+.app-bar-logo {
+  height: 30px;
+  padding-left: 1%; }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
   width: 100%;
-  height: 85%;
   display: flex;
   flex-direction: row; }
 
-.bar-separator {
-  height: 15%;
-  background-color: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(3px); }
+li {
+  width: 20%;
+  border-right: 1px solid white;
+  text-align: center; }
+
+li a {
+  display: block;
+  color: white;
+  text-decoration: none;
+  padding-left: 30%; }
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111; }
