Fix path to color schema

--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -1,10 +1,8 @@
-@import '../ColorSchema.scss';
-
+@import '../../styles/ColorSchema.scss';
 .container {
     display: block;
     position: relative;
     text-align: left;
-
     padding-top: 3px;
     padding-left: 30px;
     margin-bottom: 15px;
@@ -17,24 +15,25 @@
     width: 60px;
 }
 
-.small-rb-container{
+.small-rb-container {
     padding-top: 0px;
     padding-left: 20px;
     margin-bottom: 0;
     text-align: start;
 }
 
-.medium-rb-container{
+.medium-rb-container {
     padding-top: 3px;
     padding-left: 30px;
 }
 
-.large-rb-container{
+.large-rb-container {
     padding-top: 10px;
     padding-left: 40px;
 }
 
 /* Hide the browser's default radio button */
+
 .container input {
     position: absolute;
     opacity: 0;
@@ -42,6 +41,7 @@
 }
 
 /* Create a custom radio button */
+
 .checkmark {
     position: absolute;
     top: 0;
@@ -52,15 +52,15 @@
     border-radius: 50%;
 }
 
-.container:hover input ~ .checkmark {
+.container:hover input~.checkmark {
     background: $dark-gray;
 }
 
-.container:active input ~ .checkmark {
-    background: #434343 ;
+.container:active input~.checkmark {
+    background: #434343;
 }
 
-.container input:checked ~ .checkmark {
+.container input:checked~.checkmark {
     background: $blue-grad;
 }
 
@@ -70,78 +70,78 @@
     display: none;
 }
 
-.container input:checked ~ .checkmark:after {
+.container input:checked~.checkmark:after {
     display: block;
 }
 
 .container .checkmark:after {
- 	top: 5px;
-	left: 5px;
-	width: 15px;
-	height: 15px;
-	border-radius: 50%;
-	background: white;
+    top: 5px;
+    left: 5px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: white;
 }
 
-.small-checkmark{
+.small-checkmark {
     top: 3px;
     width: 15px;
     height: 15px;
 }
 
-.container .small-checkmark:after{
+.container .small-checkmark:after {
     top: 3px;
-	left: 3px;
+    left: 3px;
     width: 9px;
-	height: 9px;
+    height: 9px;
 }
 
-.large-checkmark{
+.large-checkmark {
     width: 35px;
     height: 35px;
 }
 
-.container .large-checkmark:after{
+.container .large-checkmark:after {
     width: 25px;
-	height: 25px;
+    height: 25px;
 }
 
-.dark-text{
+.dark-text {
     color: black;
 }
 
-.light-text{
+.light-text {
     color: white;
 }
 
-.blue-back input:checked ~ .checkmark {
+.blue-back input:checked~.checkmark {
     background: $blue-grad;
 }
 
-.grey-back input:checked ~ .checkmark {
+.grey-back input:checked~.checkmark {
     background: $dark-gray-grad;
 }
 
-.green-back input:checked ~ .checkmark {
+.green-back input:checked~.checkmark {
     background: $green-grad;
 }
 
-.orange-back input:checked ~ .checkmark {
+.orange-back input:checked~.checkmark {
     background: $orange-grad;
 }
 
-.pink-back input:checked ~ .checkmark {
+.pink-back input:checked~.checkmark {
     background: $pink-grad;
 }
 
-.purple-back input:checked ~ .checkmark {
+.purple-back input:checked~.checkmark {
     background: $purple-grad;
 }
 
-.red-back input:checked ~ .checkmark {
+.red-back input:checked~.checkmark {
     background: $red-grad;
 }
 
-.yellow-back input:checked ~ .checkmark {
+.yellow-back input:checked~.checkmark {
     background: $yellow-grad;
 }
