--- a/src/components/RadioButton/RadioButton.css
+++ b/src/components/RadioButton/RadioButton.css
@@ -40,17 +40,17 @@
   left: 0;
   height: 25px;
   width: 25px;
-  background: linear-gradient(180deg, #6C6C6C 0%, #434343 100%);
+  background: linear-gradient(180deg, #6c6c6c 0%, #434343 100%);
   border-radius: 50%; }
 
 .container:hover input ~ .checkmark {
-  background: #6C6C6C; }
+  background: #6c6c6c; }
 
 .container:active input ~ .checkmark {
   background: #434343; }
 
 .container input:checked ~ .checkmark {
-  background: linear-gradient(180deg, #1BADF8 0%, #2B7DE5 100%); }
+  background: linear-gradient(180deg, #1badf8 0%, #2b7de5 100%); }
 
 .checkmark:after {
   content: "";
@@ -94,25 +94,25 @@
   color: white; }
 
 .blue-back input:checked ~ .checkmark {
-  background: linear-gradient(180deg, #1BADF8 0%, #2B7DE5 100%); }
+  background: linear-gradient(180deg, #1badf8 0%, #2b7de5 100%); }
 
 .grey-back input:checked ~ .checkmark {
-  background: linear-gradient(180deg, #6C6C6C 0%, #434343 100%); }
+  background: linear-gradient(180deg, #6c6c6c 0%, #434343 100%); }
 
 .green-back input:checked ~ .checkmark {
-  background: linear-gradient(180deg, #63DA38 0%, #00AB21 100%); }
+  background: linear-gradient(180deg, #63da38 0%, #00ab21 100%); }
 
 .orange-back input:checked ~ .checkmark {
-  background: linear-gradient(180deg, #FF9500 0%, #D75F00 100%); }
+  background: linear-gradient(180deg, #ff9500 0%, #d75f00 100%); }
 
 .pink-back input:checked ~ .checkmark {
-  background: linear-gradient(180deg, #FF2968 0%, #99195E 100%); }
+  background: linear-gradient(180deg, #ff2968 0%, #99195e 100%); }
 
 .purple-back input:checked ~ .checkmark {
-  background: linear-gradient(180deg, #CC73E1 0%, #7C1FA1 100%); }
+  background: linear-gradient(180deg, #cc73e1 0%, #7c1fa1 100%); }
 
 .red-back input:checked ~ .checkmark {
-  background: linear-gradient(180deg, #FF3B30 0%, #C22518 100%); }
+  background: linear-gradient(180deg, #ff3b30 0%, #c22518 100%); }
 
 .yellow-back input:checked ~ .checkmark {
-  background: linear-gradient(180deg, #FFCC00 0%, #D8AC21 100%); }
+  background: linear-gradient(180deg, #ffcc00 0%, #d8ac21 100%); }
