--- a/src/components/Alert/Alert.scss
+++ b/src/components/Alert/Alert.scss
@@ -19,10 +19,11 @@
     position: absolute;
     left: 50%;
     top: 40%;
+    font-family: Arial, Helvetica, sans-serif;
     transform: translate(-50%, -50%);
 }
 
-.alert-title{
+.alert-title {
     font-size: 25px;
     margin-top: 3%;
     margin-bottom: 2%;
@@ -30,13 +31,13 @@
     padding-left: 5%;
 }
 
-.alert-content{
+.alert-content {
     text-align: left;
     padding-left: 5%;
     font-size: 14px;
 }
 
-.alert-footer{
+.alert-footer {
     position: absolute;
     bottom: 10%;
     right: 5%;
@@ -48,5 +49,17 @@
         height: 20%;
         margin: auto;
         top: 50%;
+    }
+}
+
+@media (max-height: 500px) {
+    .alert {
+        height: 25%;
+    }
+}
+
+@media (max-height: 250px) {
+    .alert {
+        height: 50%;
     }
 }
