--- a/src/components/RadioButton/RadioButton.css
+++ b/src/components/RadioButton/RadioButton.css
@@ -11,7 +11,8 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  width: 60px; }
+  width: 60px;
+  font-family: Arial, Helvetica, sans-serif; }
 
 .small-rb-container {
   padding-top: 0px;
