--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -13,6 +13,8 @@
     -ms-user-select: none;
     user-select: none;
     width: 60px;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .small-rb-container {
