--- a/src/components/Snackbar/Snackbar.scss
+++ b/src/components/Snackbar/Snackbar.scss
@@ -11,18 +11,20 @@
     user-select: none;
     backdrop-filter: blur(5px);  
     -webkit-backdrop-filter: blur(5px);
-    
     position: fixed;
 }
 
 .SnackBar-message {
     padding: 0px 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
     font-size: 14px;
     text-align: left;
 }
 
 .SnackBar-button {
     padding: 6px 8px;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     color: #FF3B30;
 }
