--- a/src/components/Alert/Alert.scss
+++ b/src/components/Alert/Alert.scss
@@ -1,4 +1,4 @@
-.alert-backdrop {
+.rc-alrt-backdrop {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -10,7 +10,7 @@
     backdrop-filter: blur(3px);
 }
 
-.alert {
+.rc-alrt {
     background-color: #fff;
     border-radius: 13px;
     width: 30%;
@@ -23,7 +23,7 @@
     transform: translate(-50%, -50%);
 }
 
-.alert-title {
+.rc-alrt-title {
     font-size: 25px;
     margin-top: 3%;
     margin-bottom: 2%;
@@ -31,20 +31,20 @@
     padding-left: 5%;
 }
 
-.alert-content {
+.rc-alrt-content {
     text-align: left;
     padding-left: 5%;
     font-size: 14px;
 }
 
-.alert-footer {
+.rc-alrt-footer {
     position: absolute;
     bottom: 10%;
     right: 5%;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-    .alert {
+    .rc-alrt {
         width: 70%;
         height: 20%;
         margin: auto;
@@ -53,13 +53,13 @@
 }
 
 @media (max-height: 500px) {
-    .alert {
+    .rc-alrt {
         height: 25%;
     }
 }
 
 @media (max-height: 250px) {
-    .alert {
+    .rc-alrt {
         height: 50%;
     }
 }
