--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -4,7 +4,7 @@
     cursor: pointer;
 }
 
-.cupertino-checkbox {
+.rc-checkbox {
     height: 15px;
     width: 15px;
     border-radius: 30%;
@@ -16,36 +16,36 @@
     outline: none;
 }
 
-.small-checkbox {
+.rc-small-checkbox {
     height: 15px;
     width: 15px;
 }
 
-.medium-checkbox {
+.rc-medium-checkbox {
     height: 25px;
     width: 25px;
 }
 
-.large-checkbox {
+.rc-large-checkbox {
     height: 35px;
     width: 35px;
 }
 
-.small-def-checkbox {
+.rc-small-def-checkbox {
     transform: scale(1.3);
 }
 
-.medium-def-checkbox {
+.rc-medium-def-checkbox {
     transform: scale(2.2);
     margin-left: 25%;
 }
 
-.large-def-checkbox {
+.rc-large-def-checkbox {
     transform: scale(3);
     margin-left: 30%;
 }
 
-.checkbox-icon {
+.rc-checkbox-icon {
     height: 100%;
     cursor: pointer;
 }
