--- a/src/components/PushButton/PushButton.css
+++ b/src/components/PushButton/PushButton.css
@@ -1,11 +1,11 @@
-.push-button {
+.rc-push-button {
   color: white;
   outline-style: none;
   user-select: none;
   border: none;
   cursor: pointer; }
 
-.small-btn {
+.rc-small-btn {
   height: 25px;
   width: 80px;
   font-size: 12px;
@@ -13,7 +13,7 @@
   -moz-border-radius: 6px;
   border-radius: 6px; }
 
-.medium-btn {
+.rc-medium-btn {
   height: 35px;
   width: 120px;
   font-size: 16px;
@@ -21,7 +21,7 @@
   -moz-border-radius: 9px;
   border-radius: 9px; }
 
-.large-btn {
+.rc-large-btn {
   height: 45px;
   width: 160px;
   font-size: 20px;
