--- a/src/components/PushButton/PushButton.scss
+++ b/src/components/PushButton/PushButton.scss
@@ -1,4 +1,4 @@
-.push-button {
+.rc-push-button {
     color: white;
     outline-style: none;
     user-select: none;
@@ -6,7 +6,7 @@
     cursor: pointer;
 }
 
-.small-btn{
+.rc-small-btn{
     height: 25px;
     width: 80px;
     font-size: 12px;
@@ -15,7 +15,7 @@
     border-radius: 6px;
 }
 
-.medium-btn{
+.rc-medium-btn{
     height: 35px;
     width: 120px;
     font-size: 16px;
@@ -24,7 +24,7 @@
     border-radius: 9px;
 }
 
-.large-btn{
+.rc-large-btn{
     height: 45px;
     width: 160px;
     font-size: 20px;
