--- a/src/components/Textbox/Textbox.css
+++ b/src/components/Textbox/Textbox.css
@@ -1,16 +1,16 @@
-.cupertino-textbox:focus ~ .rs-float-label,
-.cupertino-textbox:not(:focus):valid ~ .rs-float-label {
+.rc-textbox:focus ~ .rc-textbox-label,
+.rc-textbox:not(:focus):valid ~ .rc-textbox-label {
   top: 5%;
   left: 5%;
   font-size: 10px;
   opacity: 0.5; }
 
-.tb-div {
+.rc-tb-div {
   position: relative;
   width: 220px;
   height: 45px; }
 
-.cupertino-textbox {
+.rc-textbox {
   font-size: 12px;
   padding-top: 3%;
   padding-left: 5%;
@@ -20,12 +20,12 @@
   border-radius: 6px;
   border: 1px solid gray; }
 
-.cupertino-textbox:focus {
+.rc-textbox:focus {
   box-shadow: 0 0 5pt 1pt #2B7DE5;
   border: 1px solid gray;
   transition: box-shadow 0.2s ease-in-out; }
 
-.rs-float-label {
+.rc-textbox-label {
   position: absolute;
   pointer-events: none;
   font-family: Arial, Helvetica, sans-serif;
