--- a/src/components/RadioButton/RadioButton.css
+++ b/src/components/RadioButton/RadioButton.css
@@ -2,7 +2,7 @@
   display: block;
   position: relative;
   text-align: left;
-  padding-top: 3px;
+  padding-top: 4px;
   padding-left: 30px;
   margin-bottom: 15px;
   cursor: pointer;
@@ -15,8 +15,9 @@
   font-family: Arial, Helvetica, sans-serif; }
 
 .small-rc-radio-container {
-  padding-top: 0px;
-  padding-left: 20px;
+  font-size: 13px;
+  padding-top: 3px;
+  padding-left: 18px;
   margin-bottom: 0;
   text-align: start; }
 
@@ -25,7 +26,8 @@
   padding-left: 30px; }
 
 .large-rc-radio-container {
-  padding-top: 10px;
+  font-size: 20px;
+  padding-top: 7px;
   padding-left: 40px; }
 
 /* Hide the browser's default radio button */
@@ -54,7 +56,7 @@
   background: linear-gradient(180deg, #1badf8 0%, #2b7de5 100%); }
 
 .rc-checkmark:after {
-  content: "";
+  content: '';
   position: absolute;
   display: none; }
 
