--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -3,7 +3,7 @@
     display: block;
     position: relative;
     text-align: left;
-    padding-top: 3px;
+    padding-top: 4px;
     padding-left: 30px;
     margin-bottom: 15px;
     cursor: pointer;
@@ -14,12 +14,12 @@
     user-select: none;
     width: 60px;
     font-family: Arial, Helvetica, sans-serif;
-
 }
 
 .small-rc-radio-container {
-    padding-top: 0px;
-    padding-left: 20px;
+    font-size: 13px;
+    padding-top: 3px;
+    padding-left: 18px;
     margin-bottom: 0;
     text-align: start;
 }
@@ -30,7 +30,8 @@
 }
 
 .large-rc-radio-container {
-    padding-top: 10px;
+    font-size: 20px;
+    padding-top: 7px;
     padding-left: 40px;
 }
 
@@ -67,7 +68,7 @@
 }
 
 .rc-checkmark:after {
-    content: "";
+    content: '';
     position: absolute;
     display: none;
 }
